# spaxum

./: .gitignore  README.md
example/: Cargo.toml  build.rs
example/frontend/: package.json
example/frontend/src/: app.tsx  index.css
example/src/: main.rs
spaxum/: Cargo.toml  index.html  index_live_reload.html  live_reload.html
spaxum/src/: lib.rs
