[package]
name = "spaxum"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
memory-serve = { version = "1.2" }
memory-serve-core = { version = "1.2" }
tokio = { version = "1.0", features = ["full"] }
# parse manifest
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# reverse proxy dependencies
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
