[package]
name = "spaxum"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
memory-serve = { version = "2.1" }
tokio = { version = "1.0", features = ["full"] }
# parse manifest
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
# reverse proxy dependencies
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
